compiler/tests/en/errors/pure_map_mut.salam
// EXPECT: E012
pure func tally(k str) i32:
    m HashMap<str, i32> = HashMap {}
    m.put(k, 1)
    ret m.size()
end

func main:
    println(tally("a"))
end
